# site

./: .gitignore  CLAUDE.md  README.md  book.html  business_card.html  business_card_back.html  business_card_topleft.html  church_pitch.html  clients.yml  contact.html  flyer.html  how_it_works.html  index.html  monthly_maintenance_scope.md  plain-web-works-optional-it-support.md  plainwebworks_client_health_check_and_reporting_plan.md  plainwebworks_go_live_checklist_explained.md  privacy.html  pyproject.toml  real_q_a.md  robots.txt  sample_report.html  sample_report_failed.html  script.js  security_is_not_a_state_html_fragment.html  sitemap.xml  stuff_to_do_before_live.md  styles.css  terms.html  thank_you.html  wrangler.jsonc
docs/: mike_hawkes_business_proposal_and_ad.md  mike_hawkes_operating_model.md  plainwebworks_business_proposal_and_ad.md  plainwebworks_operating_model.md  setup_status.md  small_business_webpages.md
reports/daily/: 2026-06-03.html  2026-06-03.json
src/plainwebworks_healthcheck/: __init__.py  cli.py
testing/jeff/: index.html
